# serializer version: 1
# name: test_create_table_with_decfloat
  '''
  
  CREATE TABLE mock_table (
  	id DECFLOAT(38)
  )
  
  
  '''
# ---
# name: test_create_table_with_decfloat_without_precision
  '''
  
  CREATE TABLE mock_table (
  	id DECFLOAT
  )
  
  
  '''
# ---
